# wallet-explorer

./: .gitignore  DEBUGGING_REPORT.md  DEPLOYMENT.md  DNS_FIX.md  ETHERSCAN_API_KEY_SETUP.md  FEATURES.md  PROJECT_SUMMARY.md  README.md  TESTING.md  fix-dns.bat  fix-dns.ps1  pyproject.toml  start.bat  start.ps1
backend/: __init__.py  config.py  main.py  models.py
backend/routers/: transactions.py
backend/services/: __init__.py  etherscan.py  trongrid.py
frontend/: explorer.html  index.html
frontend/css/: styles.css
frontend/js/: explorer.js  wallet.js
